src/styles.css
/* Global Styles */
html{
box-sizing: border-box;
}
*, *:before, *:after{
box-sizing: inherit;
}
body {
    font-family: 'Open Sans', sans-serif;
    margin: 0;
}
h1, h2{
    font-family: 'Caveat', cursive;
    font-weight: 400;
}
h1{
    font-size: 80px;
}
h2{
    font-size: 40px;
    margin-top: 0px;
}
a {
    color: #EF233C; 
}
a:hover{
    text-decoration: none;
}
.content-wrap{
    max-width: 950px;
    margin: 0 auto;
    padding: 50px;
}

.col-narrow{
width: 30%;
min-height: 175px;
float: left;
}
.col-wide{
width: 70%;
min-height: 175px;
float: left;
padding-left: 30px;
}
/* Header and Footer */
header, footer{
    background: #2B2D42;
    color: #8D99AE;
}

.profile-image{
border-radius: 30%;
}

header h1, header h2{
    color: #EDF2F4;
    margin: 0;
}

footer{
    text-align: center;
}
.contact-info a{
    padding: 10px;
    display: inline-block;
}
/* Work Experience */
.work{
    background: #EDF2F4;
}
/* Education */
.education{
    background: #8D99AE;
}

